@@ -532,7 +532,8 @@ void shadowircd_cmd_join(char *user, char *channel, time_t chantime)
 	ud = find_uid(user);
 	send_cmd(NULL, "SJOIN %ld %s + :%s", (long int) chantime,
 			 channel, (ud ? ud->uid : user));
-	/* TODO: Add AutoMode handler */
+	if (AutoOp && AutoMode && LogChannel == channel)
+		denora_automode(channel);
 }
 
 /*
