@@ -15,6 +15,7 @@ Additions
 11/02/11 r416 Added support for ircd-rizon
 
 Changes
+12/07/18 Applied denora_automode to several protocols
 12/07/18 Moved automode handler into a separate void and marked some todo's regarding it for later
 12/07/18 Added automode handler for logchannel into inspircd11
 12/07/17 p10 wants 391 replies (RPL_TIME) in another way. 'Fixed', just need to calc offset somehow.
